// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ignores empty rows 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
    "raw": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
  },
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
    "raw": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
  },
]
`;

exports[`reads XLSX file correctly 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        123,
      ],
      "obj": Object {
        "A": "hello",
        "B": 123,
      },
    },
    "raw": Object {
      "arr": Array [
        "hello",
        123.123,
      ],
      "obj": Object {
        "A": "hello",
        "B": 123.123,
      },
    },
  },
]
`;

exports[`reads XLSX file with header 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        123,
      ],
      "obj": Object {
        "column1": "hello",
        "column2": 123,
      },
    },
    "raw": Object {
      "arr": Array [
        "hello",
        123.123,
      ],
      "obj": Object {
        "column1": "hello",
        "column2": 123.123,
      },
    },
  },
]
`;

exports[`reads empty XLSX file correctly 1`] = `Array []`;
